--- a/android/AssociationServicePlatform/www/templates/tab-account.html
+++ b/android/AssociationServicePlatform/www/templates/tab-account.html
@@ -1,9 +1,18 @@
 <ion-view view-title="Account">
   <ion-content>
     <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
+		<ion-toggle ng-model="settings.enableFriends">
+			启用手势登录
+		</ion-toggle>
+		<ion-item ng-model="settings.enableFriends">
+			修改密码
+		</ion-item>
+		<ion-item ng-model="settings.enableFriends">
+			关于协会
+		</ion-item>
+		<ion-item ng-model="settings.enableFriends">
+			关于软件
+		</ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
