add plus button function
simple invoke an acton sheet, has not finished the action associate with
each button

--- a/android/AssociationServicePlatform/www/templates/tab-account.html
+++ b/android/AssociationServicePlatform/www/templates/tab-account.html
@@ -8,6 +8,9 @@
 			修改密码
 		</ion-item>
 		<ion-item ng-model="settings.enableFriends">
+			清空缓存
+		</ion-item>
+		<ion-item ng-model="settings.enableFriends">
 			关于协会
 		</ion-item>
 		<ion-item ng-model="settings.enableFriends">
