--- a/android/AssociationServicePlatform/www/templates/tabs.html
+++ b/android/AssociationServicePlatform/www/templates/tabs.html
@@ -16,6 +16,11 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
 
+   <!-- news Tab -->
+  <ion-tab title="协会咨询" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/news">
+    <ion-nav-view name="tab-news"></ion-nav-view>
+  </ion-tab>
+  
   <!-- Account Tab -->
   <ion-tab title="我的设置" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
