add logo file and change app title

--- a/android/AssociationServicePlatform/www/templates/tab-news.html
+++ b/android/AssociationServicePlatform/www/templates/tab-news.html
@@ -1,4 +1,4 @@
-<ion-view view-title="AssociationGroup">
+<ion-view view-title="协会咨询">
  <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="n in news" type="item-text-wrap" >
