--- a/android/AssociationServicePlatform/www/templates/tab-dash.html
+++ b/android/AssociationServicePlatform/www/templates/tab-dash.html
@@ -1,4 +1,4 @@
-<ion-view view-title="AssociationGroup">
+<ion-view view-title="协会列表">
  <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="group in groups" type="item-text-wrap" >
