add sub group function
when click on the list of association, it will direct to the sub
association

--- a/android/AssociationServicePlatform/www/templates/tab-account.html
+++ b/android/AssociationServicePlatform/www/templates/tab-account.html
@@ -1,20 +1,20 @@
 <ion-view view-title="我的科协">
   <ion-content>
     <ion-list>
-		<ion-toggle ng-model="settings.enableFriends">
+		<ion-toggle href="#">
 			启用手势登录
 		</ion-toggle>
-		<ion-item ng-model="settings.enableFriends">
+		<ion-item >
 			修改密码
 		</ion-item>
-		<ion-item ng-model="settings.enableFriends">
+		<ion-item >
 			清空缓存
 		</ion-item>
-		<ion-item ng-model="settings.enableFriends">
+		<ion-item href="#/tab/account/about">
 			关于协会
 		</ion-item>
-		<ion-item ng-model="settings.enableFriends">
-			关于软件
+		<ion-item href="#/tab/account/software">
+			关于软件 V0.1
 		</ion-item>
     </ion-list>
   </ion-content>
