--- a/android/AssociationServicePlatform/www/templates/tab-dash.html
+++ b/android/AssociationServicePlatform/www/templates/tab-dash.html
@@ -1,7 +1,8 @@
 <ion-view view-title="协会列表">
  <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="group in groups" type="item-text-wrap" >
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="group in groups" type="item-text-wrap" 
+	  href="#/tab/dash/{{group.id}}">
         <h2>{{group.name}}</h2>
         <p>{{group.description}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
